--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "a little program to determine which css styles aren't being used",
   "version": "0.0.2",
   "homepage": "https://github.com/jgallen23/lonely-styles",
-  "authors": ["Greg Allen <@jgaui>"],
+  "author": "Greg Allen <@jgaui> (http://jga.me)",
   "repository": {
     "type": "git",
     "url": "https://jgallen23@github.com/jgallen23/lonely-styles.git"
@@ -11,6 +11,7 @@
   "keywords": ["css", "stylesheets"],
   "dependencies": {
     "zombie": "*",
+    "request": "*",
     "resistance": "*"
   },
   "bin" : {
