--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "keywords": ["css", "stylesheets", "coverage"],
   "dependencies": {
+    "optimist": "*",
     "zombie": "*",
     "request": "*",
     "resistance": "*"
